@@ -1,4 +1,5 @@
 0.11
+ - Change callback names to cb_ prefix.
 
 0.10 2025-04-28T10:35:36+02:00
  - Add lang parameter to set of language from URL.
